// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#C6EBBE",
      "flex": 1,
      "height": "100%",
      "padding": "3%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": "15%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "height": "40%",
            "width": "100%",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          onSubmitEditing={[Function]}
          placeholder="Search"
          placeholderTextColor="#666"
          rejectResponderTermination={true}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderColor": "#666",
              "borderRadius": 10,
              "borderWidth": 1,
              "color": "#000",
              "fontSize": 18,
              "height": 45,
              "margin": 10,
              "paddingHorizontal": 10,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexGrow": 1,
        "height": "85%",
        "marginHorizontal": 0,
        "width": "100%",
      }
    }
  >
    <AIRMap
      handlePanDrag={false}
      initialRegion={null}
      loadingEnabled={true}
      onChange={[Function]}
      onLayout={[Function]}
      onMapReady={[Function]}
      onMarkerPress={[Function]}
      onRegionChangeComplete={[Function]}
      region={
        Object {
          "latitude": 45.473483092360105,
          "latitudeDelta": 0.0922,
          "longitude": 9.187337635878599,
          "longitudeDelta": 0.0421,
        }
      }
      style={
        Object {
          "alignSelf": "stretch",
          "height": "100%",
          "padding": "10%",
        }
      }
    />
  </View>
</View>
`;

exports[`renders correctly 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#C6EBBE",
      "borderBottomWidth": 1,
      "borderColor": "#000",
      "flex": 2,
      "padding": "2%",
    }
  }
>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Insert new password"
      placeholderTextColor="#aaaaaa"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "height": 48,
          "marginBottom": 10,
          "marginLeft": 30,
          "marginRight": 30,
          "marginTop": 10,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Confirm Password"
      placeholderTextColor="#aaaaaa"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "height": 48,
          "marginBottom": 10,
          "marginLeft": 30,
          "marginRight": 30,
          "marginTop": 10,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D95D39",
          "borderRadius": 5,
          "height": 48,
          "justifyContent": "center",
          "marginLeft": 30,
          "marginRight": 30,
          "marginTop": 20,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Cambia password
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 3`] = `
<View
  style={
    Object {
      "backgroundColor": "#C6EBBE",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
  >
    <View>
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          multiline={true}
          numberOfLines={5}
          onChangeText={[Function]}
          placeholder="insert here new biography"
          placeholderTextColor="#aaaaaa"
          rejectResponderTermination={true}
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 5,
              "height": 48,
              "marginBottom": 10,
              "marginLeft": 30,
              "marginRight": 30,
              "marginTop": 10,
              "overflow": "hidden",
              "paddingLeft": 16,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#D95D39",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "opacity": 1,
                  "width": 150,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  }
                }
              >
                 PICK PICTURE 
              </Text>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#D95D39",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "opacity": 1,
                  "width": 150,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  }
                }
              >
                 PICK CAMERA 
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": null,
                }
              }
              style={
                Object {
                  "backgroundColor": "black",
                  "height": 200,
                  "width": 200,
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#D95D39",
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "marginLeft": "13%",
              "marginTop": "13%",
              "opacity": 1,
              "width": 300,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            SAVE
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders correctly 4`] = `
<View
  style={
    Object {
      "backgroundColor": "#C6EBBE",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
  >
    <View>
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          onChangeText={[Function]}
          placeholder="Insert new name"
          placeholderTextColor="#aaaaaa"
          rejectResponderTermination={true}
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 5,
              "height": 48,
              "marginBottom": 10,
              "marginLeft": 30,
              "marginRight": 30,
              "marginTop": 10,
              "overflow": "hidden",
              "paddingLeft": 16,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          multiline={true}
          numberOfLines={5}
          onChangeText={[Function]}
          placeholder="Insert new description"
          placeholderTextColor="#aaaaaa"
          rejectResponderTermination={true}
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 5,
              "height": 48,
              "marginBottom": 10,
              "marginLeft": 30,
              "marginRight": 30,
              "marginTop": 10,
              "overflow": "hidden",
              "paddingLeft": 16,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          onChangeText={[Function]}
          placeholder="Insert new price"
          placeholderTextColor="#aaaaaa"
          rejectResponderTermination={true}
          style={
            Object {
              "backgroundColor": "white",
              "borderRadius": 5,
              "height": 48,
              "marginBottom": 10,
              "marginLeft": 30,
              "marginRight": 30,
              "marginTop": 10,
              "overflow": "hidden",
              "paddingLeft": 16,
            }
          }
          underlineColorAndroid="transparent"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#D95D39",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "opacity": 1,
                  "width": 150,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  }
                }
              >
                 PICK PICTURE 
              </Text>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#D95D39",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 8,
                  "opacity": 1,
                  "width": 150,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  }
                }
              >
                 PICK CAMERA 
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": null,
                }
              }
              style={
                Object {
                  "backgroundColor": "black",
                  "height": 200,
                  "width": 200,
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#D95D39",
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "marginLeft": "13%",
              "marginTop": "13%",
              "opacity": 1,
              "width": 300,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            SAVE CHANGE
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders correctly 5`] = `<View />`;
